--- a/test/fixtures/trends.yml
+++ b/test/fixtures/trends.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  string: 
-  user: one
+  tag: MyString
+  tweet: one
 
 two:
-  string: 
-  user: two
+  tag: MyString
+  tweet: two
